<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/create_new_account"
            android:layout_gravity="center"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>

        <FrameLayout
            android:id="@+id/layout_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/image_profile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                app:riv_oval="true"/>

            <TextView
                android:id="@+id/tv_label_add_image"
                android:text="@string/add_image"
                android:layout_gravity="center"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <EditText
            android:id="@+id/input_name"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>


        <EditText
            android:id="@+id/input_password"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>


        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>

        <FrameLayout
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/sign_up"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"/>
            
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:visibility="invisible"/>

        </FrameLayout>
        
        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>